# ruff-format

./: Cargo.toml  LICENSE  README.md  pyproject.toml  ruff_format.pyi
.github/workflows/: CI.yml
src/: lib.rs
