[package]
name = "ruff-format"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_format"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git" }
