[package]
name = "ruff-format"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reflex-dev/ruff-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_format"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.26.0"
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git" }
