[package]
name = "ruff-format"
version = "0.4.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reflex-dev/ruff-format"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ruff_format"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["abi3"] }
ruff_python_formatter = { git = "https://github.com/astral-sh/ruff.git" }
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git" }
