[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "ruff-format"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "pyproject.toml" },
    { file = "ruff_format.pyi" },
    { file = "src/**/*.rs" },
]
